# i2-access-contracts

./: README.md
artifacts/: checksums.txt  checksums_intermediate.txt  cw_access_contract_extruder.wasm
contracts/cw-access-contract/: Cargo.toml  README.md
contracts/cw-access-contract-extruder/: Cargo.toml  README.md
contracts/cw-access-contract-extruder/schema/: cw-i2-creator.json
contracts/cw-access-contract-extruder/schema-maker/: schema.rs
contracts/cw-access-contract-extruder/schema/raw/: instantiate.json
contracts/cw-access-contract-extruder/src/: errors.rs  lib.rs  msgs.rs  state.rs
contracts/cw-access-contract-extruder/src/entry_points/: execute.rs  instantiate.rs  query.rs
contracts/cw-access-contract-extruder/src/entry_points/execute/: create.rs
contracts/cw-access-contract-extruder/src/tests/: core_tests.rs
contracts/cw-access-contract/schema-maker/: schema.rs
contracts/cw-access-contract/src/: errors.rs  lib.rs  msgs.rs  state.rs
contracts/cw-access-contract/src/entry_points/: execute.rs  instantiate.rs  migrate.rs  mod.rs  query.rs
contracts/cw-access-contract/src/entry_points/execute/: exec.rs
contracts/cw-access-contract/src/tests/: contracts.rs  core_tests.rs
contracts/cw-generic-extruder/: Cargo.toml
contracts/cw-generic-extruder/schema-maker/: schema.rs
contracts/cw-generic-extruder/schema/raw/: execute.json
contracts/cw-generic-extruder/src/: errors.rs  lib.rs  msgs.rs  state.rs
contracts/cw-generic-extruder/src/entry_points/: execute.rs  instantiate.rs  query.rs
contracts/cw-generic-extruder/src/entry_points/execute/: create.rs
contracts/cw-generic-extruder/src/tests/: mod.rs
